--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import 'tailwindcss/utilities';
 
 .card {
-    @apply p-5 bg-white shadow-lg rounded-lg hover:bg-gray-200 border-2 border-gray-600 transition;
+    @apply p-5 bg-white shadow-lg rounded-lg hover:bg-gray-200 border-2 border-gray-600;
 }
 
 .inputField {
